add_executable(test_maxwell_FDsolver_degree_2 test_maxwell_FDsolver_degree_2.cpp)
add_executable(test_maxwell_FDsolver_degree_4 test_maxwell_FDsolver_degree_4.cpp)
add_executable(test_maxwell_FDsolver_degree_6 test_maxwell_FDsolver_degree_6.cpp)

if(GEMPIC_USE_CUDA)
  setup_target_for_cuda_compilation(test_maxwell_FDsolver_degree_2)
  setup_target_for_cuda_compilation(test_maxwell_FDsolver_degree_4)
  setup_target_for_cuda_compilation(test_maxwell_FDsolver_degree_6)
endif()

target_link_libraries(test_maxwell_FDsolver_degree_2 GEMPICX)
target_link_libraries(test_maxwell_FDsolver_degree_4 GEMPICX)
target_link_libraries(test_maxwell_FDsolver_degree_6 GEMPICX)

#target_link_libraries( test_FillBD ${AMReX_LIBRARIES} )

if("${AMReX_SPACEDIM}" STREQUAL "3")
  add_subdirectory(IOFiles3D)
elseif("${AMReX_SPACEDIM}" STREQUAL "2")
  add_subdirectory(IOFiles2D)
elseif("${AMReX_SPACEDIM}" STREQUAL "1")
  add_subdirectory(IOFiles1D)
else()
  message("Dimension not implemented in AMReX")
endif()
