add_executable(test_AMReX_FillBoundary test_AMReX_FillBoundary.cpp)
add_executable(test_AMReX_OverrideSync test_AMReX_OverrideSync.cpp)
add_executable(test_boundaries_sync test_boundaries_sync.cpp)
add_executable(test_curl_projection test_curl_projection.cpp)
add_executable(test_grad_projection test_grad_projection.cpp)
add_executable(test_div_projection test_div_projection.cpp)
add_executable(test_projection_one_two_forms test_projection_one_two_forms.cpp)
add_executable(test_projection_zero_three_forms test_projection_zero_three_forms.cpp)
add_executable(test_plus_minus_mult test_plus_minus_mult.cpp)
add_executable(test_FDHodge_degree_2 test_FDHodge_degree_2.cpp)
add_executable(test_FDHodge_degree_4 test_FDHodge_degree_4.cpp)
add_executable(test_FDHodge_degree_6 test_FDHodge_degree_6.cpp)

target_link_libraries(test_AMReX_FillBoundary GEMPICX)
target_link_libraries(test_AMReX_OverrideSync GEMPICX)
target_link_libraries(test_boundaries_sync GEMPICX)
target_link_libraries(test_curl_projection GEMPICX)
target_link_libraries(test_grad_projection GEMPICX)
target_link_libraries(test_div_projection GEMPICX)
target_link_libraries(test_projection_one_two_forms GEMPICX)
target_link_libraries(test_projection_zero_three_forms GEMPICX)
target_link_libraries(test_plus_minus_mult GEMPICX)
target_link_libraries(test_FDHodge_degree_2 GEMPICX)
target_link_libraries(test_FDHodge_degree_4 GEMPICX)
target_link_libraries(test_FDHodge_degree_6 GEMPICX)

if(GEMPIC_USE_CUDA)
  setup_target_for_cuda_compilation(test_AMReX_FillBoundary)
  setup_target_for_cuda_compilation(test_AMReX_OverrideSync)
  setup_target_for_cuda_compilation(test_boundaries_sync)
  setup_target_for_cuda_compilation(test_curl_projection)
  setup_target_for_cuda_compilation(test_grad_projection)
  setup_target_for_cuda_compilation(test_div_projection)
  setup_target_for_cuda_compilation(test_projection_one_two_forms)
  setup_target_for_cuda_compilation(test_projection_zero_three_forms)
  setup_target_for_cuda_compilation(test_plus_minus_mult)
  setup_target_for_cuda_compilation(test_FDHodge_degree_2)
  setup_target_for_cuda_compilation(test_FDHodge_degree_4)
  setup_target_for_cuda_compilation(test_FDHodge_degree_6)
endif()

if("${AMReX_SPACEDIM}" STREQUAL "3")
  add_subdirectory(IOFiles3D)
elseif("${AMReX_SPACEDIM}" STREQUAL "2")
  add_subdirectory(IOFiles2D)
elseif("${AMReX_SPACEDIM}" STREQUAL "1")
  add_subdirectory(IOFiles1D)
else()
  message("Dimension not implemented in AMReX")
endif()


