add_executable(test_bernstein_waves test_bernstein_waves.cpp)
add_executable(test_vlasov_poisson test_vlasov_poisson.cpp)

if(GEMPIC_USE_CUDA) 
  setup_target_for_cuda_compilation(test_bernstein_waves)
  setup_target_for_cuda_compilation(test_vlasov_poisson)
endif()

target_link_libraries(test_bernstein_waves GEMPICX)
target_link_libraries(test_vlasov_poisson GEMPICX)

if("${AMReX_SPACEDIM}" STREQUAL "3")
  add_subdirectory(IOFiles3D)
elseif("${AMReX_SPACEDIM}" STREQUAL "2")
  add_subdirectory(IOFiles2D)
elseif("${AMReX_SPACEDIM}" STREQUAL "1")
  add_subdirectory(IOFiles1D)
else()
  message("Dimension not implemented in AMReX")
endif()
