file(GLOB PARAMETERS "../../io/parameters/GEMPIC_Params.cpp")
file(GLOB FDDERHAMCOMPLEX "../../forms/FDDeRhamComplex/GEMPIC_FDDeRhamComplex.cpp")
file(GLOB DERIVATIVES "../../forms/GEMPIC_extDerivatives.cpp")
file(GLOB POISSON "../Poisson/GEMPIC_PoissonSolver.cpp")

add_executable ( test_maxwell_yee test_maxwell_yee.cpp )
add_executable ( test_maxwell_yee_order test_maxwell_yee_order.cpp )
add_executable ( test_poisson_CG test_poisson_CG.cpp )
add_executable ( test_ihodge_CG test_ihodge_CG.cpp )
add_executable ( test_ampere_faraday test_ampere_faraday.cpp )
add_executable ( test_AMReX_atomic_add test_AMReX_atomic_add.cpp )
add_executable ( test_constval test_constval.cpp )
add_executable ( test_maxwell_FDsolver_degree_2 ${PARAMETERS} ${FDDERHAMCOMPLEX} ${DERIVATIVES} test_maxwell_FDsolver_degree_2.cpp )
add_executable ( test_maxwell_FDsolver_degree_4 ${PARAMETERS} ${FDDERHAMCOMPLEX} ${DERIVATIVES} test_maxwell_FDsolver_degree_4.cpp )
add_executable ( test_maxwell_FDsolver_degree_6 ${PARAMETERS} ${FDDERHAMCOMPLEX} ${DERIVATIVES} test_maxwell_FDsolver_degree_6.cpp )
add_executable ( test_Poisson ${FDDERHAMCOMPLEX} ${PARAMETERS} ${POISSON} test_Poisson.cpp )

if (USE_CUDA)
	setup_target_for_cuda_compilation( test_maxwell_yee )
	setup_target_for_cuda_compilation( test_maxwell_yee_order )
	setup_target_for_cuda_compilation( test_poisson_CG )
	setup_target_for_cuda_compilation( test_ihodge_CG )
	setup_target_for_cuda_compilation( test_ampere_faraday )
	setup_target_for_cuda_compilation( test_AMReX_atomic_add )
	setup_target_for_cuda_compilation( test_constval )
    setup_target_for_cuda_compilation( test_maxwell_FDsolver_degree_2 )
    setup_target_for_cuda_compilation( test_maxwell_FDsolver_degree_4 )
    setup_target_for_cuda_compilation( test_maxwell_FDsolver_degree_6 )
    setup_target_for_cuda_compilation( test_Poisson )
endif()


target_link_libraries( test_maxwell_yee  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_maxwell_yee_order  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_poisson_CG  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_ihodge_CG  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_ampere_faraday  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_AMReX_atomic_add  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_constval AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_maxwell_FDsolver_degree_2 AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_maxwell_FDsolver_degree_4 AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_maxwell_FDsolver_degree_6 AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_Poisson AMReX::amrex AMReX::Flags_CXX )

#target_link_libraries( test_FillBD ${AMReX_LIBRARIES} )


if (USE_CUDA)
  setup_target_for_cuda_compilation( test_constval )
endif()

if("${AMReX_SPACEDIM}" STREQUAL "3")
	add_subdirectory(IOFiles_3D)
elseif("${AMReX_SPACEDIM}" STREQUAL "2")
    add_subdirectory(IOFiles_2D)
elseif("${AMReX_SPACEDIM}" STREQUAL "1")
    add_subdirectory(IOFiles_1D)
else()
	message("Dimension not implemented in AMReX")
endif()
