file(GLOB PARAMETERS "../../io/parameters/GEMPIC_Params.cpp")
file(GLOB FDDERHAMCOMPLEX "../../forms/FDDeRhamComplex/GEMPIC_FDDeRhamComplex.cpp")
file(GLOB DERIVATIVES "../../forms/GEMPIC_extDerivatives.cpp")
file(GLOB POISSON "../Poisson/GEMPIC_PoissonSolver.cpp")

add_executable( test_constval test_constval.cpp )
add_executable( test_maxwell_FDsolver_degree_2 ${PARAMETERS} ${FDDERHAMCOMPLEX} ${DERIVATIVES} test_maxwell_FDsolver_degree_2.cpp )
add_executable( test_maxwell_FDsolver_degree_4 ${PARAMETERS} ${FDDERHAMCOMPLEX} ${DERIVATIVES} test_maxwell_FDsolver_degree_4.cpp )
add_executable( test_maxwell_FDsolver_degree_6 ${PARAMETERS} ${FDDERHAMCOMPLEX} ${DERIVATIVES} test_maxwell_FDsolver_degree_6.cpp )
add_executable( test_Poisson ${FDDERHAMCOMPLEX} ${PARAMETERS} ${POISSON} test_Poisson.cpp )

if(GEMPIC_USE_CUDA)
  setup_target_for_cuda_compilation( test_constval )
  setup_target_for_cuda_compilation( test_maxwell_FDsolver_degree_2 )
  setup_target_for_cuda_compilation( test_maxwell_FDsolver_degree_4 )
  setup_target_for_cuda_compilation( test_maxwell_FDsolver_degree_6 )
  setup_target_for_cuda_compilation( test_Poisson )
endif()

target_link_libraries( test_constval AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_maxwell_FDsolver_degree_2 AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_maxwell_FDsolver_degree_4 AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_maxwell_FDsolver_degree_6 AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_Poisson AMReX::amrex AMReX::Flags_CXX )

#target_link_libraries( test_FillBD ${AMReX_LIBRARIES} )


if(GEMPIC_USE_CUDA)
  setup_target_for_cuda_compilation( test_constval )
endif()

if("${AMReX_SPACEDIM}" STREQUAL "3")
  add_subdirectory(IOFiles_3D)
elseif("${AMReX_SPACEDIM}" STREQUAL "2")
  add_subdirectory(IOFiles_2D)
elseif("${AMReX_SPACEDIM}" STREQUAL "1")
  add_subdirectory(IOFiles_1D)
else()
  message("Dimension not implemented in AMReX")
endif()
