file(GLOB PARAMETERS "../../io/parameters/GEMPIC_Params.cpp")
file(GLOB FDDERHAMCOMPLEX "../FDDeRhamComplex/GEMPIC_FDDeRhamComplex.cpp")
file(GLOB DERIVATIVES "../GEMPIC_extDerivatives.cpp")

add_executable( test_gempic_norm test_gempic_norm.cpp)
add_executable( test_AMReX_FillBoundary test_AMReX_FillBoundary.cpp )
add_executable( test_AMReX_OverrideSync test_AMReX_OverrideSync.cpp )
add_executable( test_AMReX_SumBoundary test_AMReX_SumBoundary.cpp )
add_executable( test_AMReX_Dot test_AMReX_Dot.cpp )
add_executable( test_boundaries_sync ${PARAMETERS} ${FDDERHAMCOMPLEX} test_boundaries_sync.cpp )
add_executable( test_curl_projection ${PARAMETERS} ${FDDERHAMCOMPLEX} ${DERIVATIVES} test_curl_projection.cpp )
add_executable( test_grad_projection ${PARAMETERS} ${FDDERHAMCOMPLEX} ${DERIVATIVES} test_grad_projection.cpp )
add_executable( test_div_projection ${PARAMETERS} ${FDDERHAMCOMPLEX} ${DERIVATIVES} test_div_projection.cpp )
add_executable( test_projection_one_two_forms ${PARAMETERS} ${FDDERHAMCOMPLEX} test_projection_one_two_forms.cpp )
add_executable( test_projection_zero_three_forms ${PARAMETERS} ${FDDERHAMCOMPLEX} test_projection_zero_three_forms.cpp )
add_executable( test_plus_minus_mult ${PARAMETERS} ${FDDERHAMCOMPLEX} test_plus_minus_mult.cpp )
add_executable( test_FDHodge_degree_2 ${PARAMETERS} ${FDDERHAMCOMPLEX} test_FDHodge_degree_2.cpp )
add_executable( test_FDHodge_degree_4 ${PARAMETERS} ${FDDERHAMCOMPLEX} test_FDHodge_degree_4.cpp )
add_executable( test_FDHodge_degree_6 ${PARAMETERS} ${FDDERHAMCOMPLEX} test_FDHodge_degree_6.cpp )

target_link_libraries( test_gempic_norm AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_AMReX_FillBoundary  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_AMReX_OverrideSync  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_AMReX_SumBoundary  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_AMReX_Dot  AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_boundaries_sync AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_curl_projection AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_grad_projection AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_div_projection AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_projection_one_two_forms AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_projection_zero_three_forms AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_plus_minus_mult AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_FDHodge_degree_2 AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_FDHodge_degree_4 AMReX::amrex AMReX::Flags_CXX )
target_link_libraries( test_FDHodge_degree_6 AMReX::amrex AMReX::Flags_CXX )

if(GEMPIC_USE_CUDA)
  setup_target_for_cuda_compilation( test_gempic_norm )
  setup_target_for_cuda_compilation( test_AMReX_FillBoundary )
  setup_target_for_cuda_compilation( test_AMReX_OverrideSync )
  setup_target_for_cuda_compilation( test_AMReX_SumBoundary )
  setup_target_for_cuda_compilation( test_AMReX_Dot )
  setup_target_for_cuda_compilation( test_boundaries_sync )
  setup_target_for_cuda_compilation( test_curl_projection )
  setup_target_for_cuda_compilation( test_grad_projection )
  setup_target_for_cuda_compilation( test_div_projection )
  setup_target_for_cuda_compilation( test_projection_one_two_forms )
  setup_target_for_cuda_compilation( test_projection_zero_three_forms )
  setup_target_for_cuda_compilation( test_plus_minus_mult )
  setup_target_for_cuda_compilation( test_FDHodge_degree_2 )
  setup_target_for_cuda_compilation( test_FDHodge_degree_4 )
  setup_target_for_cuda_compilation( test_FDHodge_degree_6 )
endif()

if("${AMReX_SPACEDIM}" STREQUAL "3")
  add_subdirectory(IOFiles_3D)
elseif("${AMReX_SPACEDIM}" STREQUAL "2")
  add_subdirectory(IOFiles_2D)
elseif("${AMReX_SPACEDIM}" STREQUAL "1")
  add_subdirectory(IOFiles_1D)
else()
  message("Dimension not implemented in AMReX")
endif()


